--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2568,11 +2568,12 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
+		justify-content: center;
 		-moz-flex-wrap: wrap;
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		postiion: relative;
+		position: relative;
 		margin: -2.5em 0 0 -2.5em;
 	}
 
@@ -2638,7 +2639,7 @@ input, select, textarea {
 					background-position: center;
 					background-repeat: no-repeat;
 					background-size: 100% 100%;
-					opacity: 0.25;
+					opacity: 0;
 					z-index: 2;
 				}
 
@@ -2706,11 +2707,25 @@ input, select, textarea {
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #f2849e;
+				background-color: #000000d8;
+			}
+
+			.tiles article.style1 > .image img {
+				object-fit: cover;
+				width: 100%;
+				height: 300px;
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #7ecaf6;
+				background-color: #000000d8;
+			}
+
+			.tiles article.style2 > .image img {
+				object-fit: contain;
+				width: 100%;
+				height: 400px;
+				background-color: #C4CA2F;
+				display: block;
 			}
 
 			.tiles article.style3 > .image:before {
